--- a/index.css
+++ b/index.css
@@ -3,9 +3,11 @@ html, body {
     padding: 0;
 }
 
-body {
-    padding: 15px;
+* {
     box-sizing: border-box;
+}
+
+body {
     background: no-repeat center center fixed; 
     -webkit-background-size: cover;
     -moz-background-size: cover;
@@ -13,10 +15,11 @@ body {
     background-size: cover;
     color: white;
     font-family: Arial, Helvetica, sans-serif;
-    text-shadow: 1px 1px 2px #474747;
+    text-shadow: 0px 0px 20px #aaaaaa;
 }
 
 main{
+    padding: 15px;
     height: 100vh;
     display: flex;
     flex-direction: column;
